# url-shortener

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/core/: config.py  errors.py  logging.py
app/middleware/: request_id.py
tests/: conftest.py  test_config.py  test_request_id.py  test_version.py
tests/unit/: test_logging.py
