[project]
name = "url-shortener"
version = "0.1.0"
description = "Production-style URL shortener (Week 1: Python only)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Your Name" }]

dependencies = [
  "fastapi>=0.111,<1.0",
  "uvicorn[standard]>=0.29,<1.0",
  "pydantic>=2.6,<3.0",
  "structlog>=24.1,<25.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.23,<0.24",
  "httpx>=0.27,<0.28",
  "mypy>=1.10,<2.0",
  "ruff>=0.5,<0.6",
  "types-requests",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E","F","I","UP","B","C4","PIE","T20","SIM","PL"]
ignore = ["E203"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["T20"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# Package ONLY app/ — no 'packages.find' table at all
[tool.setuptools]
packages = ["app"]
